# opacity-tools

./: CMakeLists.txt  LICENSE  Tests.py  readme.md
ReferenceValues/: reference_data.csv  reference_data_Hj.csv  reference_data_Xj.csv  reference_data_dust.csv  reference_data_dust_s.csv  reference_data_e1.csv  reference_data_e2.csv  reference_data_nu.csv  reference_data_sig.csv
examples/: CExample  CExample.c  FortranExample  FortranExample.f90  Makefile  Makefile_C  Makefile_F90
include/: conductivities.h  opacities.h
lib/: opacities.h
pyopacities/: libpyopacities.dylib  opacities.py  pyopacities_example.ipynb
src/: CMakeLists.txt  CodeTests.cxx  Conductivity.hxx  ConductivityTools.cxx  FileIO.hxx  Grids.hxx  Interpolate.hxx  Opacity.hxx  OpacityTools.cxx  allocators.hxx  conductivity_interfaces.c  conductivity_interfaces.cxx  conductivity_interfaces.h  constants.hxx  integrals.hxx  matrix.hxx  opacity_bindings.cxx  opacity_interfaces.cxx  opacity_interfaces.h  py_opacities.cxx  py_opacities.h  python_bindings.cxx  roots.hxx  user_side.h  utils.hxx
